Document -P: preforked mode.

--- a/man/krb5_admind.8
+++ b/man/krb5_admind.8
@@ -9,7 +9,7 @@
 .Nd kerberos administration daemon
 .Sh SYNOPSIS
 .Nm
-.Op Fl Mv
+.Op Fl MPv
 .Op Fl a Ar acl_file
 .Op Fl d Ar database
 .Op Fl m Ar master
@@ -32,6 +32,13 @@ The options are as follows:
 .It Fl M
 specifies that the master is the current host.
 Should be used only for setting up test servers.
+.It Fl P
+specifies that
+.Nm
+will run in preforked mode, that is
+.Nm
+will expect that fd 0 will be a listening socket and will
+serially accept and process incoming connexions.
 .It Fl a Ar acl_file
 specifies the location of the ACL file.
 Defaults to
