It's command arg [arg ...], not command command [arg].

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -11,7 +11,7 @@
 .Nm
 .Op Fl dlv
 .Op Fl h Ar hostspec
-.Ar command Ar command Oo Ar arg ... Oc
+.Ar command Ar arg Oo Ar arg ... Oc
 .Sh DESCRIPTION
 .Nm
 is used to make modifications to the Kerberos database, either remotely
