--- a/man/krb5_prestash.1
+++ b/man/krb5_prestash.1
@@ -11,7 +11,7 @@
 .Nm
 .Op Fl Elv
 .Op Fl h Ar hostspec
-.Ar command Ar command Oo Ar arg ... Oc
+.Ar command Ar arg Oo Ar arg ... Oc
 .Sh DESCRIPTION
 .Nm
 is used to add, remove, query and fetch prestashed tickets.
