Add a -r REALM flag to krb5_admin/krb5_prestash.

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -11,6 +11,7 @@
 .Nm
 .Op Fl dlv
 .Op Fl h Ar hostspec
+.Op Fl r Ar REALM
 .Ar command Ar arg Oo Ar arg ... Oc
 .Sh DESCRIPTION
 .Nm
@@ -33,6 +34,9 @@ A
 .Ar hostspec
 has a format of
 .Oo Ar service@ Oc Ns Ar hostname Ns Oo : Ns Ar port Oc .
+.It Fl r Ar REALM
+connect to one of the KDCs for realm
+.Ar REALM .
 .It Fl l
 operate on the local Kerberos DB.
 .It Fl v
