tolower for consistency.

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -27,7 +27,7 @@ The options are as follows:
 .It Fl d
 print debugging output.
 .It Fl h Ar hostspec
-Connect to
+connect to
 .Ar hostspec
 instead of searching for KDCs using the usual method.
 A
