--- a/man/krb5_prestash.1
+++ b/man/krb5_prestash.1
@@ -22,7 +22,7 @@ The options are as follows:
 .It Fl E
 expand hosts accoring to site-specific rules.
 .It Fl h Ar hostspec
-Connect to
+connect to
 .Ar hostspec
 instead of searching for KDCs using the usual method.
 A
