--- a/man/krb5_admind.conf.5
+++ b/man/krb5_admind.conf.5
@@ -29,6 +29,15 @@ Also see
 configuration variable
 .Ar $use_fetch .
 This value defaults to false.
+.It Ar $allow_fetch_old
+is a boolean value which indicates whether
+.Xr krb5_admind 8
+is willing to allow clients to directly fetch old keys from the Kerberos
+database.  Old keys are those whose version number is smaller than
+the highest key version number.  This makes it possible to recover
+keys for outstanding tickets after creating a new key.  Key recovery
+makes possible decryption of past traffic, and if possible should not
+be enabled.  This value defaults to false.
 .It Ar $enable_host_subdomain
 is a boolean variable that if true allows hosts to manage keys for services
 whose instance is a direct subdomain of the host.  This supports multiple
