Add ``feature'' flags to krb5_admin{,d}.

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -129,6 +129,14 @@ will list the policies that match
 .Ar glob .
 .El
 .Pp
+Commands that operate on ``features'':
+.Bl -ohang -offset ind
+.It add_feature Ar feature
+Adds a ``feature'' flag.
+.It has_feature Ar feature
+Check to see if ``feature'' is present, i.e. has been added.
+.El
+.Pp
 Commands that operate on hosts:
 .Pp
 .Bl -ohang -offset ind
