--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -63,6 +63,37 @@ If no
 is provided on the command line,
 .Nm
 will prompt for commands to process.
+.Pq This behaviour is deprecated as the quoting is sub-optimal.
+.Pp
+The remaining arguments to
+.Nm
+are accepted from the shell and no further quoting is performed.
+The first argument is considered to be the command and the remaining
+arguments are passed to the command.
+Some commands accept a list of key value pairs starting after a
+particular position.
+Some keys are denoted as ``set-based'' meaning that they manage a
+set of values rather than an individual setting.
+Set-based keys take a comma-separated list of values
+.Pq interpreted as a set
+and can also
+take plus equals
+.Pq +=
+or minus equals
+.Pq -=
+to add or subtract elements from the set.
+.Pp
+Authorisation to make a change is checked both before and after any action.
+If the owernsip is changed such that the actor may not revert the change,
+then the change is not allowed.
+This means that you cannot relinquish access to any of the objects that
+.Nm
+manages.
+This has the nice property that the user can always undo any action
+that they just performed.
+The downside is that transferring ownership becomes a two step
+process where the original owner adds a new owner and then the new
+owner removes the old owner.
 .Pp
 Commands that operate on principals:
 .Pp
@@ -103,17 +134,7 @@ will reset the password of a principal to a random temporary password
 which is printed to stdout. The password must be reset by the user via
 .Xr kpasswd 1 .
 .It Ar modify Ar princ Oo Ar key=val ... Oc
-will modify a principal or its associated attributes.  The additional
-arguments are a list of key value pairs indicating what is to be
-set.
-Set-based keys take a comma-separated list of values
-.Pq interpreted as a set
-and can also
-take plus equals
-.Pq +=
-or minus equals
-.Pq -=
-to add or subtract elements from the set.
+will modify a principal or its associated attributes.
 The following keys are defined for all principals: princ_expire_time,
 pw_expiration, max_life, max_renewable_life, and attributes.
 The following keys are defined for appids:
@@ -142,16 +163,42 @@ Check to see if ``feature'' is present, i.e. has been added.
 Commands that operate on hosts:
 .Pp
 .Bl -ohang -offset ind
-.It create_host Ar name No realm Ar REALM Op No bootbinding Ar principal
-Create a host in the krb5_admin database with the given realm name and
-bootbinding. The realm is used for prestashed ticket access control and the
-optional bootbinding principal is used to bind an ephemeral principal to a
-host principal in the same realm.
-.It bind_host Ar name Ar principal
+.It create_host Ar host No realm= Ns Ar REALM Op No key=val ...
+Create a host in the krb5_admin database with the given realm and
+bootbinding.
+The realm is used for prestashed ticket access control and is a
+required parameter.
+The remaining key value pairs are the same as for
+.Ar modify_host .
+.It create_logical_host
+Create a logical host.
+This commands works the same as
+.Ar create_host
+except the host created is marked as a logical host which means that
+it is either an alias to an existing host or a cluster of hosts.
+.It bind_host Ar host Ar principal
 Bind an existing host to the given ephemeral principal, this
 entitles the host to negotiate its initial keys.
+.It remove_host Ar host
+Remove
+.Ar host .
+.It modify_host Ar host Op No key=val ...
+will modify the attributes of a host.
+The following keys are defined for all hosts: realm, ip_addr,
+bootbinding, and owner
+.Pq set-based .
 .El
+.Sh EXIT STATUS
+The
+.Nm
+utility normally exits 0 on success, and exits 1 on failure.
 .Sh EXAMPLES
+To create an appid
+.Ar webserver :
+.Bd -literal
+	$ krb5_admin create_appid webserver
+.Ed
+.Pp
 To add
 .Ar elric@IMRRYR.ORG
 to the list of owners of the appid
@@ -159,6 +206,23 @@ to the list of owners of the appid
 .Bd -literal
 	$ krb5_admin modify webserver owner+=elric@IMRRYR.ORG
 .Ed
+.Pp
+To list all of the principals that begin with web:
+.Bd -literal
+	$ krb5_admin list web\*
+.Ed
+.Pp
+Show a host:
+.Bd -literal
+	$ krb5_admin query_host foo.example.com
+.Ed
+.Pp
+To change the owners of a host:
+.Bd -literal
+	$ krb5_admin modify_host foo.example.com owner+=elric@IMRRYR.ORG
+	$ krb5_admin modify_host foo.example.com owner-=yyrkoon@IMRRYR.ORG
+.Ed
+.Pp
 .Sh SEE ALSO
 .Xr knc 1 ,
 .Xr krb5_admind 8 ,
