Document that Krb5Admin::master() now returns the name of the master KDC.

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -95,6 +95,12 @@ The downside is that transferring ownership becomes a two step
 process where the original owner adds a new owner and then the new
 owner removes the old owner.
 .Pp
+General commands:
+.Bl -ohang -offset ind
+.It Ar master
+outputs the name of the master KDC.
+.El
+.Pp
 Commands that operate on principals:
 .Pp
 .Bl -ohang -offset ind
