krb5_admin(1): fix formatting error.

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -383,7 +383,7 @@ to the list of owners of the appid
 .Pp
 To list all of the principals that begin with web:
 .Bd -literal
-	$ krb5_admin list web\*
+	$ krb5_admin list web\\*
 .Ed
 .Pp
 Show a host:
