Fix typo in man page.

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -271,7 +271,7 @@ The realm is used for prestashed ticket access control and is a
 required parameter.
 The remaining key value pairs are the same as for
 .Ar modify_host .
-.It create_logical_host
+.It create_logical_host Ar host
 Create a logical host.
 This commands works the same as
 .Ar create_host
