--- a/man/krb5_admind.conf.5
+++ b/man/krb5_admind.conf.5
@@ -88,6 +88,9 @@ can retrieve keys for
 .Ar host/foo@REALM2
 and
 .Ar host/foo@REALM3 .
+.It Ar $timeout
+is the timeout for reading a command from the network.
+The default value is 300.
 .El
 .Pp
 Syntax errors will terminate parsing causing all subsequent configuration
