Minor documentation updates.

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -86,7 +86,7 @@ or minus equals
 to add or subtract elements from the set.
 .Pp
 Authorisation to make a change is checked both before and after any action.
-If the owernsip is changed such that the actor may not revert the change,
+If the ownership is changed such that the actor may not revert the change,
 then the change is not allowed.
 This means that you cannot relinquish access to any of the objects that
 .Nm
