--- a/man/krb5_prestash.1
+++ b/man/krb5_prestash.1
@@ -105,6 +105,7 @@ and
 will cause queries to use host expansion.
 .Sh SEE ALSO
 .Xr knc 1 ,
+.Xr krb5_admin 1 ,
 .Xr krb5_admind 8 ,
 .Xr krb5_keytab 8 ,
 .Xr krb5_prestash 1 .
