--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkrb5admin-perl (0.3-1) unstable; urgency=low
+
+  * Innumerable new features.
+
+ -- Roland C. Dowdeswell <roland.dowdeswell@twosigma.com>  Tue, 1 Nov 2016 18:28:56 +0000
+
 libkrb5admin-perl (0.1-1) unstable; urgency=low
 
   * Initial Release.
