--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libkrb5admin-perl (0.3.4) unstable; urgency=low
+
+  * Add missing "prototype" for ext_sync_func
+  * Fix create_subject
+
+ -- Viktor Dukhovni <viktor@twosigma.com>  Thu, 17 Nov 2016 03:43:16 +0000
+
 libkrb5admin-perl (0.3.3) unstable; urgency=low
 
   * Fix Input Validation for remove_ticket
