--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
+libkrb5admin-perl (0.3.6) unstable; urgency=low
+
+  * krb5_prestash now creates krb5cc_:* as separate files.
+
+ -- Roland C. Dowdeswell <roland.dowdeswell@twosigma.com>  Thu, 17 Nov 2016 19:43:16 +0000
+
 libkrb5admin-perl (0.3.5) unstable; urgency=low
 
-  * Add missing "prototype" for ext_sync_func
-  * Fix create_subject
+  * Bad version.
 
  -- Roland C. Dowdeswell <roland.dowdeswell@twosigma.com>  Thu, 17 Nov 2016 17:43:16 +0000
 
