--- a/man/krb5_prestash.1
+++ b/man/krb5_prestash.1
@@ -19,10 +19,24 @@ is used to add, remove, query and fetch prestashed tickets.
 .Pp
 The options are as follows:
 .Bl -tag -width indentxxxxxx
+.It Fl D Ar kdb
+specifies the location of the Kerberos DB when running against a local
+database.
+Defaults to the location built into the Kerberos libriares.
+Implies
+.Fl l .
 .It Fl E
 expand hosts accoring to site-specific rules.
 .It Fl M
 connect to the master KDC.
+.It Fl S Ar sqlitedb
+specifies the location of the sqlite3 adjunct database where
+.Nm
+stores its additional schemas.
+Can only be used if running against a local database.
+.It Fl c Ar conf_file
+specifies the location of the configuration file.  Defaults to
+.Pa /etc/krb5/krb5_admind.conf .
 .It Fl h Ar hostspec
 connect to
 .Ar hostspec
