krb5_prestash: add json output with -J.

--- a/man/krb5_prestash.1
+++ b/man/krb5_prestash.1
@@ -27,6 +27,8 @@ Implies
 .Fl l .
 .It Fl E
 expand hosts accoring to site-specific rules.
+.It Fl J
+output is JSON formatted rather than human readable.
 .It Fl M
 connect to the master KDC.
 .It Fl S Ar sqlitedb
