Implement ``search_host''.
We would have called this list_host to match list_subject, list_group,
but we should actually rename those because they are searches.  We will
then re-implement list_* to take a glob of some sort rather than a list
of conditions.

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -331,6 +331,9 @@ If the optional field parameters are supplied then only the fields
 specified will be displayed.
 If only one optional field parameter is supplied then the output will
 be a newline separated list of values.
+.It search_host Ar Op No key=val ...
+lists all hosts that satisfy the conditions specified.
+If the key is set-based, then any of the supplied list can match.
 .El
 .Ss Host Secrets
 .Nm
